--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">Mural Policia</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">MuralApp</string>
+    <string name="title_activity_main">MuralApp</string>
+    <string name="action_settings">Identificar por Imagem</string>
+    <string name="refresh">refresh</string>
     <string name="section_format">Hello World from section: %1$d</string>
 </resources>
